--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -145,7 +145,7 @@ mutation {
 
 <p>
 <a href="/docs/authentication-magic"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> 
-    Log in with magic URL
+    Log in with Magic URL
 </a>
 </p>
 
