Don't use images and emojis for Appwrite migration docs

--- a/app/views/docs/migrations-supabase.phtml
+++ b/app/views/docs/migrations-supabase.phtml
@@ -28,11 +28,11 @@
 <tbody>
   <tr>
     <td>Supabase</td>
-    <td>✅</td>
-    <td>✅</td>
-    <td>✅</td>
-    <td>✅</td>
-    <td></td>
+    <td><span class="tag green">supported</span></td>
+    <td><span class="tag green">supported</span></td>
+    <td><span class="tag green">supported</span></td>
+    <td><span class="tag green">supported</span></td>
+    <td><span class="tag">not supported</span></td>
   </tr>
 </tbody>
 </table>
