--- a/app/views/docs/migrations-nhost.phtml
+++ b/app/views/docs/migrations-nhost.phtml
@@ -28,11 +28,11 @@
 <tbody>
   <tr>
     <td>NHost</td>
-    <td>✅</td>
-    <td>✅</td>
-    <td>✅</td>
-    <td>✅</td>
-    <td></td>
+    <td><span class="tag green">supported</span></td>
+    <td><span class="tag green">supported</span></td>
+    <td><span class="tag green">supported</span></td>
+    <td><span class="tag green">supported</span></td>
+    <td><span class="tag">not supported</span></td>
   </tr>
 </tbody>
 </table>
