--- a/app/views/docs/migrations.phtml
+++ b/app/views/docs/migrations.phtml
@@ -1,5 +1,5 @@
 <p>
-    Ready to migrate your project to Appwrite? 
+    If you're looking to migrate existing projects to Appwrite, Migrations can help you make the move more quickly.
     You can move your app from Firebase, Supabase, NHost, and even move between self-hosted and Cloud projects using Migrations.
     Migrations will automatically move accounts, database documents, and storage files from one source to another.
 </p>
@@ -12,50 +12,64 @@
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large text-size-small vertical">
     <thead>
         <tr>
-            <th style="width: 180px">Source</th>
-            <th style="width: 120px"></th>
+            <th>Source</th>
+            <th>Users</th>
+            <th>Databases</th>
+            <th>Documents</th>
+            <th>Files</th>
+            <th>Functions</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td>
-                Firebase
+                <p><a href="/docs/migrations-firebase"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Firebase</a></p>
             </td>
-            <td>
-                <p><a href="/docs/migrations-firebase"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Migrate from Firebase</a></p>
-            </td>
+            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">partial</span></td>
+            <td><span class="tag green">supported</span></td>
+            <td></td>
         </tr>
         <tr>
             <td>
-                Supabase
+                <p><a href="/docs/migrations-supabase"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Supabase</a></p>
             </td>
-            <td>
-                <p><a href="/docs/migrations-supabase"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Migrate from Supabase</a></p>
-            </td>
+            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">partial</span></td>
+            <td><span class="tag green">supported</span></td>
+            <td></td>
         </tr> 
         <tr>
             <td>
-                NHost
+                <p><a href="/docs/migrations-nhost"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> NHost</a></p>
             </td>
-            <td>
-                <p><a href="/docs/migrations-nhost"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Migrate from NHost</a></p>
-            </td>
+            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">partial</span></td>
+            <td><span class="tag green">supported</span></td>
+            <td></td>
         </tr>   
         <tr>
             <td>
-                Cloud to Self-host
+                <p><a href="/docs/migrations-cloud-to-local"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Cloud to Self-hosted</a></p>
             </td>
-            <td>
-                <p><a href="/docs/migrations-cloud-to-local"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Migrate from Appwrite Cloud to Self-hosted</a></p>
-            </td>
+            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">supported</span></td>
         </tr>   
         <tr>
             <td>
-                Self-host to Cloud
+                <p><a href="/docs/migrations-local-to-cloud"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Self-hosted to Cloud</a></p>
             </td>
-            <td>
-                <p><a href="/docs/migrations-local-to-cloud"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Migrate from Self-hosted to Appwrite Cloud</a></p>
-            </td>
+            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">supported</span></td>
         </tr>         
     </tbody>
 </table>
@@ -64,4 +78,9 @@
 <p>
     Migrations cannot transfer all data perfectly, so certain fields, such as <code>$createdAt</code> and <code>$updatedAt</code>, may not be transferred. 
     More information can be found on the migration page for each source.
+</p>
+
+<p>
+    Migrations help you jump start your move, but because each product is unique, complex databases and product unique features like functions need to be migrated manually.
+    We also recommend you carefully <b>validate permissions and data integrity</b> when moving between platforms. 
 </p>
