Instead of not support, call it manual

--- a/app/views/docs/migrations.phtml
+++ b/app/views/docs/migrations.phtml
@@ -29,7 +29,7 @@
             <td><span class="tag green">supported</span></td>
             <td><span class="tag green">partial</span></td>
             <td><span class="tag green">supported</span></td>
-            <td></td>
+            <td><span class="tag">manual</span></td>
         </tr>
         <tr>
             <td>
@@ -39,7 +39,7 @@
             <td><span class="tag green">supported</span></td>
             <td><span class="tag green">partial</span></td>
             <td><span class="tag green">supported</span></td>
-            <td></td>
+            <td><span class="tag">manual</span></td>
         </tr> 
         <tr>
             <td>
@@ -49,7 +49,7 @@
             <td><span class="tag green">supported</span></td>
             <td><span class="tag green">partial</span></td>
             <td><span class="tag green">supported</span></td>
-            <td></td>
+            <td><span class="tag">manual</span></td>
         </tr>   
         <tr>
             <td>
