Change partial to yellow

--- a/app/views/docs/migrations.phtml
+++ b/app/views/docs/migrations.phtml
@@ -27,7 +27,7 @@
             </td>
             <td><span class="tag green">supported</span></td>
             <td><span class="tag green">supported</span></td>
-            <td><span class="tag green">partial</span></td>
+            <td><span class="tag yellow">partial</span></td>
             <td><span class="tag green">supported</span></td>
             <td><span class="tag">manual</span></td>
         </tr>
@@ -37,7 +37,7 @@
             </td>
             <td><span class="tag green">supported</span></td>
             <td><span class="tag green">supported</span></td>
-            <td><span class="tag green">partial</span></td>
+            <td><span class="tag yellow">partial</span></td>
             <td><span class="tag green">supported</span></td>
             <td><span class="tag">manual</span></td>
         </tr> 
@@ -47,7 +47,7 @@
             </td>
             <td><span class="tag green">supported</span></td>
             <td><span class="tag green">supported</span></td>
-            <td><span class="tag green">partial</span></td>
+            <td><span class="tag yellow">partial</span></td>
             <td><span class="tag green">supported</span></td>
             <td><span class="tag">manual</span></td>
         </tr>   
