Personal Information -> Data

--- a/app/views/docs/authentication-email-pass.phtml
+++ b/app/views/docs/authentication-email-pass.phtml
@@ -639,7 +639,7 @@ let token = try await account.updateRecovery(
 <h2><a href="#security" id="security">Security</a></h2>
 <p>
    Appwrite's security first mindset goes beyond a securely implementated of authentication API.
-   You can enable features like password dictionary, password history, and disallow personal information to encourage users to pick better passwords.
+   You can enable features like password dictionary, password history, and disallow personal data in passwords to encourage users to pick better passwords.
    By enabling these features, you protect user data and teach better password choices, which helps make the internet a safer place.
 </p>
 <p>
