--- a/app/views/docs/authentication-oauth.phtml
+++ b/app/views/docs/authentication-oauth.phtml
@@ -216,7 +216,7 @@ print(session.providerAccessToken);</code></pre>
     </tr>
     <tr>
         <td>providerAccessToken</td>
-        <td>Access token from the OAuth 2 provider. Use this to <b>make requests to the OAuth 2 provider</b> to fetch personal information.</td>
+        <td>Access token from the OAuth 2 provider. Use this to <b>make requests to the OAuth 2 provider</b> to fetch personal data.</td>
     </tr>
     </tbody>
 </table>
