--- a/app/views/docs/authentication-oauth.phtml
+++ b/app/views/docs/authentication-oauth.phtml
@@ -61,7 +61,7 @@ await account.createOAuth2Session(provider: 'amazon');</code></pre>
     </li>
     <li>
         <h3>Android</h3>
-        <p>In order to capture the Appwrite OAuth callback url, the following activity needs to be added inside the `&lt;application&gt;` tag, along side the existing `&lt;activity&gt;` tags in your <a href="https://github.com/appwrite/playground-for-android/blob/master/app/src/main/AndroidManifest.xml" target="_blank" rel="noopener">AndroidManifest.xml</a>. Be sure to replace the <b>[PROJECT_ID]</b> string with your actual Appwrite project ID. You can find your Appwrite project ID in your project settings screen in your Appwrite console.</p>
+        <p>In order to capture the Appwrite OAuth callback url, the following activity needs to be added inside the <code>&lt;application&gt;</code> tag, along side the existing <code>&lt;activity&gt;</code> tags in your <a href="https://github.com/appwrite/playground-for-android/blob/master/app/src/main/AndroidManifest.xml" target="_blank" rel="noopener">AndroidManifest.xml</a>. Be sure to replace the <code>[PROJECT_ID]</code> string with your actual Appwrite project ID. You can find your Appwrite project ID in your project settings screen in your Appwrite console.</p>
 
 <div class="ide" data-lang="html" data-lang-label="XML">
     <pre class="line-numbers"><code class="prism language-xml" data-prism><?php echo $this->escape('<manifest ...>
@@ -97,7 +97,7 @@ account.createOAuth2Session(provider = "amazon")</code></pre>
     </li>
     <li>
         <h3>Apple</h3>
-        <p>In order to capture the Appwrite OAuth callback url, the following URL scheme needs to added to your `Info.plist`</p>
+        <p>In order to capture the Appwrite OAuth callback url, the following URL scheme needs to added to your <code>Info.plist</code>.</p>
 
 <div class="ide" data-lang="html" data-lang-label="XML">
     <pre class="line-numbers"><code class="prism language-xml" data-prism><?php echo $this->escape('<key>CFBundleURLTypes</key>
@@ -116,7 +116,7 @@ account.createOAuth2Session(provider = "amazon")</code></pre>
 ');?></code></pre>
 </div>
 
-<p>If you're using UIKit, you'll also need to add a hook to your <b>SceneDelegate.swift</b> file to ensure cookies work correctly.</p>
+<p>If you're using UIKit, you'll also need to add a hook to your <code>SceneDelegate.swift</code> file to ensure cookies work correctly.</p>
 
 <div class="ide" data-lang="swift" data-lang-label="Swift">
   <pre class="line-numbers"><code class="prism language-swift" data-prism><?php echo $this->escape('
