fix view import

--- a/app/views/docs/functions-execute.phtml
+++ b/app/views/docs/functions-execute.phtml
@@ -1,3 +1,8 @@
+<?php
+
+use Appwrite\Utopia\View;
+
+?>
 <p>
     Appwrite Functions executions can be invoked in several ways.
     Functions can be invoked through the Appwrite SDK and visting its REST endpoint. Functions can also be triggered by events and scheduled executions.
