Fix some wrong links

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -48,7 +48,7 @@ $image = new View(__DIR__.'/../general/image.phtml');
     Explore how Appwrite Functions can be invoked.
 </p>
 <p>
-<a href="/docs/functions-deploy"><i class="icon-angle-circled-right"></i>Learn more about executing functions</a>
+<a href="/docs/functions-execute"><i class="icon-angle-circled-right"></i>Learn more about executing functions</a>
 </p>
 
 <p>
@@ -64,5 +64,5 @@ $image = new View(__DIR__.'/../general/image.phtml');
     Here's a curated list of examples that showcase Appwrite Function's capabilies.
 </p>
 <p>
-<a href="/docs/examples"><i class="icon-angle-circled-right"></i>Learn more about using function examples</a>
+<a href="/docs/functions-examples"><i class="icon-angle-circled-right"></i>Learn more about using function examples</a>
 </p>
